--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<h1>It works!</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Tegado</title>
+		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+	</head>
+	<body>
+	<div class="container">
+		<h1>Tegado</h1>
+		<!--navbar -->
+		<ul class="nav">
+
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="products.html">Products</a></li>
+		</ul>
+			<img src="giftcard.jpg" alt="giftcards" width="200">
+			<p> As your gift card go-to Tegado provides a mode to buy, sell, or trade your unwanted/unused gift cards!</p>
+			<h2>Our Top Sellers</h2>
+			<ol>
+				<li>Walmart</li>
+				<li>Kmart</li>
+				<li>Target</li>
+			</ol>
+			<h2>Ways To trade</h2>
+			<ul>
+				<li>Our innovative kiosk</li>
+				<li>Our Convenient Mobile App</li>
+				<li>Our Sleek Website</li>
+			</ul>
+	</div>
+	</body>
+
+</html>
