--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 		</ul>
 		<h1>About Us</h1>
 		<p>We Want to free up the billions of dollars that have gone unused in gift cards that people don't want. Tegado provides Kiosks, a website, and an app to make it easy for you to do this!</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/dPG5lT5Ey50" frameborder="0" allowfullscreen></iframe>
+		<h2>Coming Soon!</h2>
 	</div>
 	</body>
 
