--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li><a href="contact.html">Contact Us</a></li>
 			<li><a href="products.html">Products</a></li>
 		</ul>
-			<img src="Logo.jpg" alt="tegado logo" width="200">
+			<img src="Logo.jpg" alt="tegado logo">
 			<p> As your gift card go-to Tegado provides a mode to buy, sell, or trade your unwanted/unused gift cards!</p>
 			<h2>Our Top Sellers</h2>
 			<ol>
