--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<div class="container">
-		<h1>We luv Gift Cards!!</h1>
+		<h1>Tegado</h1>
 		<!--navbar -->
 			<ul class="nav">
 
