--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<div class="container">
-		<img href="Logo.jpg">
+		<img src="Logo.jpg">
 		<!--navbar -->
 		<ul class="nav">
 
