--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<div class="container">
-		<h1>Tegado</h1>
+		<img src="Logo.jpg" width="250" height="100">
 		<!--navbar -->
 			<ul class="nav">
 
