--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Tegado</h1>
-                        <p class="intro-text">Et a sociosqu leo vel scelerisque placerat quam vestibulum ullamcorper augue est cum ultricies.</p>
+                        <p class="intro-text">The upcoming way that makes it easy and efficient to buy, sell and trade gift cards!</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
