--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Tegado</h1>
+                       <img src="Logo.jpg">
                         <p class="intro-text">The upcoming way that makes it easy and efficient to buy, sell and trade gift cards!</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
