--- a/index.html
+++ b/index.html
@@ -16,19 +16,9 @@
 			<li><a href="contact.html">Contact Us</a></li>
 			<li><a href="products.html">Products</a></li>
 		</ul>
-			<p> As your gift card go-to Tegado provides a mode to buy, sell, or trade your unwanted/unused gift cards!</p>
-			<h2>Our Top Sellers</h2>
-			<ol>
-				<li>Walmart</li>
-				<li>Kmart</li>
-				<li>Target</li>
-			</ol>
-			<h2>Ways To trade</h2>
-			<ul>
-				<li>Our innovative kiosk</li>
-				<li>Our Convenient Mobile App</li>
-				<li>Our Sleek Website</li>
-			</ul>
+			<p> As your gift card go-to Tegado provides a mode to buy, sell, or trade your unwanted/unused gift cards!
+			Very soon we will open our store so that gift card transactions can take place.</p>
+			
 	</div>
 	</body>
 
