--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<div class="container">
-		<img src="Logo.jpg" alt="giftcards" width="200">
+		<img src="Logo-nobg.jpg" alt="giftcards" width="200">
 		<!--navbar -->
 		<ul class="nav">
 
