--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
-			<li><a href="products.html">Products</a></li>
+			<li><a href="products.html">Sell Cards</a></li>
+			<li><a href="buy.html">Buy Cards</a></li>
 		</ul>
 			<p> As your gift card go-to Tegado provides a mode to buy, sell, or trade your unwanted/unused gift cards!
 			Very soon we will open our store so that gift card transactions can take place.</p>
