--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 		<img src="Logo-nobg.jpg" alt="giftcards" width="200">
 		<!--navbar -->
 		<ul class="nav">
-
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
-			<li><a href="products.html">Sell Cards</a></li>
+			<li><a href="sell.html">Sell Cards</a></li>
 			<li><a href="buy.html">Buy Cards</a></li>
 		</ul>
 			<p> As your gift card go-to Tegado provides a mode to buy, sell, or trade your unwanted/unused gift cards!
