--- a/buy.html
+++ b/buy.html
@@ -10,11 +10,11 @@
       <img src="Logo-nobg.jpg" alt="giftcards" width="200">
 		<!--navbar -->
 		<ul class="nav">
-
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
-			<li><a href="products.html">Products</a></li>
+			<li><a href="sell.html">Sell Cards</a></li>
+			<li><a href="buy.html">Buy Cards</a></li>
 		</ul>
 			
 			<p> In just a few short days we will be ready to provide you with crazy deals on your favorite cards!!!</p>
