--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
 	<div class="container">
 		<img src="Logo.jpg" width="250" height="100">
 		<!--navbar -->
-			<ul class="nav">
-
+		<ul class="nav">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
-			<li><a href="products.html">Products</a></li>
+			<li><a href="sell.html">Sell Cards</a></li>
+			<li><a href="buy.html">Buy Cards</a></li>
 		</ul>
 		<h1>Contact Us</h1>
 		<iframe src="https://docs.google.com/a/kentuckygse.com/forms/d/1d0NV5F0WrHkQDy2eTVTPNfs6ie8zWpWERE4_bhzdhC8/viewform?embedded=true" width="680" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
