--- a/sell.html
+++ b/sell.html
@@ -9,12 +9,12 @@
 	<div class="container">
 		<img src="Logo.jpg" width="250" height="100">
 		<!--navbar -->
-			<ul class="nav">
-
+		<ul class="nav">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
-			<li><a href="products.html">Products</a></li>
+			<li><a href="sell.html">Sell Cards</a></li>
+			<li><a href="buy.html">Buy Cards</a></li>
 		</ul>
 		<h1>Store</h1>
 		
