--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<div class="container">
-		<img src="Logo.jpg" width="250" height="100">
+		<img src="Logo-nobg.jpg" alt="giftcards" width="200">
 		<!--navbar -->
 		<ul class="nav">
 			<li><a href="index.html">Home</a></li>
